--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,10 +4,13 @@
     android:layout_height="match_parent"
     tools:context="com.example.michal.asgchrono.SetupFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/listView"
+        android:layout_gravity="center"
+        android:footerDividersEnabled="false"
+        android:focusableInTouchMode="false"
+        android:focusable="false"
+        android:headerDividersEnabled="false" />
 </FrameLayout>
