--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -22,14 +23,22 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tap (DEBUG)"
-                android:id="@+id/button_tap" />
+                android:text="DEBUG"
+                android:id="@+id/button_debug" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/clear_button_text"
                 android:id="@+id/button_clear" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/save_button_text"
+                android:id="@+id/button_save"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true" />
         </LinearLayout>
 
         <ProgressBar
@@ -39,8 +48,7 @@
             android:id="@+id/progressBar_monitor"
             android:progress="500"
             android:max="1000"
-            android:indeterminate="false"
-            android:theme="@android:style/Theme.Material" />
+            android:indeterminate="false" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -72,18 +80,13 @@
             android:text="@string/not_analyzed_text"
             android:id="@+id/textView_firerate" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/save_button_text"
-                android:id="@+id/button_save"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
-        </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/measure_history_title"
+            android:id="@+id/textView_history_title"
+            android:layout_marginTop="@dimen/measure_text_margin" />
 
     </LinearLayout>
 
