--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -67,7 +67,8 @@
                     android:text="@string/velocity_title"
                     android:id="@+id/textView_velocity_title"
                     android:layout_column="0"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -75,7 +76,8 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/not_analyzed_text"
                     android:id="@+id/textView_velocity"
-                    android:layout_column="1" />
+                    android:layout_column="1"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -97,7 +99,8 @@
                     android:text="@string/fire_rate_title"
                     android:id="@+id/textView_firerate_title"
                     android:layout_column="0"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -105,7 +108,8 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="@string/not_analyzed_text"
                     android:id="@+id/textView_firerate"
-                    android:layout_column="1" />
+                    android:layout_column="1"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -117,13 +121,12 @@
             </TableRow>
         </TableLayout>
 
-        <CheckBox
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Advanced view"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/checkBox"
-            android:checked="false" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Advanced statistics:"
+            android:id="@+id/textView2" />
 
         <TableLayout
             android:layout_width="match_parent"
@@ -131,7 +134,8 @@
             android:layout_gravity="center_horizontal"
             android:stretchColumns="1,2"
             android:showDividers="beginning|middle|end"
-            android:visibility="visible">
+            android:visibility="visible"
+            android:id="@+id/tableLayout_advancedView">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -361,7 +365,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listView_history"
+            android:id="@+id/listView_sampleHistory"
             android:choiceMode="singleChoice"
             android:divider="#000000"
             android:contextClickable="false"
